ci(forecasts): conditionally run research job when post ids exist

--- a/.github/workflows/forecasts_test.yml
+++ b/.github/workflows/forecasts_test.yml
@@ -41,6 +41,7 @@ jobs:
 
   research:
     needs: setup
+    if: ${{ needs.setup.post_ids }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
